--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -42,5 +42,7 @@
 @import 'account/login/login.styl';
 @import 'admin/admin.styl';
 @import 'main/main.styl';
+@import 'user-dash/user-dash.styl';
+@import 'voter/voter.styl';
 @import 'modal/modal.styl';
 // endinjector
