scaffolding and placeholders for polls on main page

--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -8,6 +8,10 @@ header#banner.hero-unit
   .row
     .col-lg-12
       h1.page-header Features: A blurb will be here later
-
+  .row
+    .col-md-12
+      h2 Polls will appear here for non registered users to vote on
+      div(ng-repeat="poll in polls")
+         h3 the polls with there options will go here
 footer.footer
   .container
