--- a/client/app/voter/voter.jade
+++ b/client/app/voter/voter.jade
@@ -1,1 +1,6 @@
 div this is the voter directive
+ul
+  li(ng-repeat="option in option")
+     input(type="checkbox")
+
+button(ng-click="addOption()") Add Option
