Send to the server polls and answers succesfully

--- a/client/app/user-dash/user-dash.jade
+++ b/client/app/user-dash/user-dash.jade
@@ -10,3 +10,6 @@ div(ng-include='"components/navbar/navbar.html"')
         button(class="btn" ng-click="addOption($event)") Add another option
 
         button(class="btn" ng-click="removeOption($event)") Remove an option
+
+
+       button(ng-click="test()") test
