Show or hide polls and new poll with button

--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -11,6 +11,7 @@ header#banner.hero-unit
   .row
     .col-md-12
       h2 Polls will appear here for non registered users to vote on
+      h2 when they have voted the poll will change to a chart
       div(ng-repeat="poll in polls")
          h3 the polls with there options will go here
 footer.footer
