--- a/client/app/user-dash/user-dash.jade
+++ b/client/app/user-dash/user-dash.jade
@@ -2,15 +2,24 @@ div(ng-include='"components/navbar/navbar.html"')
 .container
   .col-md-12
    p Welcome to your dashboard
-      form(ng-submit="addPoll($event)" class="form")
-        label Poll Question
-        input(type="text",placeholder="Add your poll question" ng-model="pollQuestion" class="form-control")
-        label Options
-        input(ng-repeat="option in options" type="text", ng-model="option.opt" placeholder="" class="form-control" )
-        input(type="submit" value="submit")
-        button(class="btn" ng-click="addOption($event)") Add another option
+   .display(ng-switch o n="polls")
+     button(ng-click='showPollForm()') New Poll
 
-        button(class="btn" ng-click="removeOption($event)") Remove an option
+     button(ng-click='showUsersPolls()') View Polls
+
+        .add-poll(ng-show="newPoll")
+          form(ng-submit="addPoll($event)" class="form")
+            label Poll Question
+            input(type="text",placeholder="Add your poll question" ng-model="pollQuestion" class="form-control")
+            label Options
+            input(ng-repeat="option in options" type="text", ng-model="option.opt" placeholder="" class="form-control" )
+            input(type="submit" value="submit")
+            button(class="btn" ng-click="addOption($event)") Add another option
+
+            button(class="btn" ng-click="removeOption($event)") Remove an option
 
 
-       button(ng-click="test()") test
+           button(ng-click="test()") test
+
+       .view-polls(ng-switch-when="show")
+          p this is the view polls section
