Put voter directive into ng repeat main

--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -13,6 +13,6 @@ header#banner.hero-unit
       h2 Polls will appear here for non registered users to vote on
       h2 when they have voted the poll will change to a chart
       div(ng-repeat="poll in polls")
-         h3 the polls with there options will go here
+        voter
 footer.footer
   .container
