--- a/client/app/voter/voter.jade
+++ b/client/app/voter/voter.jade
@@ -1,9 +1,9 @@
 div this is the voter directive
-  h3 question title
+  h3  {{data.question}}
   div(class="list-group")
   ul
-    li(ng-repeat="option in options")
-      label()
+    li(ng-repeat="option in data.options")
+      label {{option.optionName}}
        input(type="checkbox" id='')
 
-  button(ng-class="btn") Send Vote 
+  button(ng-class="btn") Send Vote
