--- a/client/app/voter/voter.jade
+++ b/client/app/voter/voter.jade
@@ -1,8 +1,9 @@
-div this is the voter directive
+div
   h3  {{poll.question}}
   div(class="list-group")
     form
-       label(ng-repeat="option in poll.options") {{option.optionName}}
-         input(type="radio" id='' ng-value="option.optionName" name="option")
+       label(ng-repeat="option in poll.options" for="{{option.optionName}}" class="list-group-item") {{option.optionName}}
+         input(type="radio" id="{{option.optionName}}"  ng-model="selectedOption" ng-value="option.optionName" name="option")
 
-  button(ng-class="btn") Send Vote
+  button(class="btn" ng-click="sendOption()") Send Vote
+  p the option you selected is: {{selectedOption}}
