--- a/client/app/voter/voter.jade
+++ b/client/app/voter/voter.jade
@@ -3,7 +3,7 @@ div
   div(class="list-group")
     form
        label(ng-repeat="option in poll.options" for="{{option.optionName}}" class="list-group-item") {{option.optionName}}
-         input(type="radio" id="{{option.optionName}}"  ng-model="selectedOption" ng-value="option.optionName" name="option")
+         input(type="radio" id="{{option.optionName}}"  ng-model="vote.selectedOption" ng-value="option.optionName" name="option")
 
   button(class="btn" ng-click="sendOption()") Send Vote
-  p the option you selected is: {{selectedOption}}
+  p the option you selected is: {{vote.selectedOption}}
