Send put call with poll id"

--- a/client/app/voter/voter.jade
+++ b/client/app/voter/voter.jade
@@ -7,3 +7,4 @@ div
 
   button(class="btn" ng-click="sendOption()") Send Vote
   p the option you selected is: {{vote.selectedOption}}
+  p this polls id is {{poll._id}}
