Show poll only if user hasntt voted

--- a/client/app/voter/voter.jade
+++ b/client/app/voter/voter.jade
@@ -1,9 +1,9 @@
 div
   h3  {{poll.question}}
-  div(class="list-group")
+
+  div(class="list-group" ng-show="thisUserCanVote")
     form
        label(ng-repeat="option in poll.options" for="{{option.optionName}}" class="list-group-item") {{option.optionName}}
          input(type="radio" id="{{option.optionName}}"  ng-model="vote.selectedOption" ng-value="option.optionName" name="option")
 
   button(class="btn" ng-click="sendOption()") Send Vote
-  
