--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -17,5 +17,10 @@ header#banner.hero-unit
       button(class="btn" ng-click="showPolls()") See our latest polls
       div(ng-repeat="poll in polls" ng-show="seePolls")
         voter(poll="poll")
+  .row
+    div(class="col-md-6 col-md-offset-4")
+      button(class="btn", ng-click="showResults()" ng-show="seeResults")
+      div
+        p here you will see the poll results for all polls and users
 footer.footer
   .container
