--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -19,8 +19,8 @@ header#banner.hero-unit
         voter(poll="poll")
   .row
     div(class="col-md-6 col-md-offset-4")
-      button(class="btn", ng-click="showResults()" ng-show="seeResults")
-      div
+      button(class="btn", ng-click="showResults()") Show Poll Results
+      div(ng-show="seeResults")
         p here you will see the poll results for all polls and users
 footer.footer
   .container
