Display own poll options on user dash

--- a/client/app/user-dash/user-dash.jade
+++ b/client/app/user-dash/user-dash.jade
@@ -24,3 +24,5 @@ div(ng-include='"components/navbar/navbar.html"')
           p this is the view polls section
           h1 polls go here
           p(ng-repeat="poll in thisUsersPolls") {{poll.question}}
+          div(ng-repeat="poll in thisUsersPolls")
+            voter(poll="poll")
