--- a/client/app/voter/voter.jade
+++ b/client/app/voter/voter.jade
@@ -1,7 +1,7 @@
 div
   h3  {{poll.question}}
 
-  div(class="list-group" ng-show="thisUserCanVote")
+  div(class="list-group")
     form
        label(ng-repeat="option in poll.options" for="{{option.optionName}}" class="list-group-item") {{option.optionName}}
          input(type="radio" id="{{option.optionName}}"  ng-model="vote.selectedOption" ng-value="option.optionName" name="option")
