--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -1,10 +1,36 @@
+$color-primary-0 = #6d695d
+// Main Primary color */
+$color-primary-1 = #d1c9b4
+$color-primary-2 = #817a65
+$color-primary-3 = #928768
+$color-primary-4 = #9f9065
+$color-secondary-1-0 = #463f49
+// Main Secondary color (1) */
+$color-secondary-1-1 = #85798b
+$color-secondary-1-2 = #514456
+$color-secondary-1-3 = #594761
+$color-secondary-1-4 = #5f456a
+$color-secondary-2-0 = #3c4644
+// Main Secondary color (2) */
+$color-secondary-2-1 = #748783
+$color-secondary-2-2 = #41534f
+$color-secondary-2-3 = #435e58
+$color-secondary-2-4 = #41675e
+$color-complement-0 = #42434c
+// Main Complement color */
+$color-complement-1 = #808191
+$color-complement-2 = #494a5a
+$color-complement-3 = #4d4e66
+$color-complement-4 = #4c4e6f
+
 .thing-form
     margin 20px 0
 
 #banner
     border-bottom none
     margin-top -20px
-
+    background-color $color-primary-0
+    color $color-primary-1
 #banner h1
     font-size 60px
     letter-spacing -1px
@@ -26,3 +52,13 @@
 
 .navbar-text
     margin-left 15px
+
+.navbar
+  background-color $color-secondary-1-2
+
+.second-header
+  position relative
+  top 13px
+
+.navbar li
+   color $color-primary-1 
