--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -61,4 +61,12 @@ $color-complement-4 = #4c4e6f
   top 13px
 
 .navbar li
-   color $color-primary-1 
+   color $color-primary-1
+
+.center-button
+    position relative
+    left 50px
+
+.surround
+   border 2px solid black
+   border-radius 20px
