Make vote route

--- a/client/app/app.styl
+++ b/client/app/app.styl
@@ -43,6 +43,7 @@
 @import 'admin/admin.styl';
 @import 'main/main.styl';
 @import 'user-dash/user-dash.styl';
+@import 'vote/vote.styl';
 @import 'voter/voter.styl';
 @import 'modal/modal.styl';
 // endinjector
