--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -63,10 +63,10 @@ $color-complement-4 = #4c4e6f
 .navbar li
    color $color-primary-1
 
-.center-button
-    position relative
-    left 50px
-
 .surround
    border 2px solid black
    border-radius 20px
+
+.col-center
+   margin auto
+   float none
